# Aster

./: .gitignore  ARCHITECTURE.md  BRAND_GUIDELINES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_SUMMARY.md  COMPLETE_SETUP.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  DOCS.md  DOCUMENTATION_ORGANIZATION.md  MODELS.md  MULTILINGUAL_SUPPORT.md  Makefile  OPEN_SOURCE_PREP.md  PROJECT_COMPLETION_SUMMARY.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
assets/: HYBRID_LOGO_OPTIONS.md  LOGO_GUIDE.md  LOGO_OPTIONS.md  README.md  REFINED_ELEGANT_OPTIONS.md  TECH_ENHANCED_OPTIONS.md  logo_preview.html
aster/: __main__.py  launchd_entry.py  vllm_sidecar.py
aster/api/: feature_emulation.py  interaction_loop.py  provider_gateway.py  routes.py  schemas.py  streaming.py
aster/audio/: __init__.py  factory.py  mlx_asr.py  mlx_tts.py  schemas.py  service.py  vllm_mlx_asr.py  vllm_mlx_tts.py
aster/autotune/: benchmark.py  profiles.py  selector.py
aster/cache/: cache_keys.py  eviction.py  paged_kv_cache.py  prefix_cache.py
aster/core/: __init__.py  canonical.py  capabilities.py  config.py  contracts.py  errors.py  lifecycle.py  process_title.py  provider_errors.py
aster/inference/: backends.py  contracts.py  decode_engine.py  embedding_backends.py  engine.py  mlx_cache_utils.py  mlx_runtime.py  model_loader.py  prefill_engine.py  speculative.py  speculative_pipeline.py  text_sanitizer.py  vllm_mlx_client.py
aster/providers/: __init__.py  _shared.py  base.py  catalog.py  registry.py  types.py
aster/runtime/: __init__.py  dispatch.py  provider_registry.py  routing.py  tools.py
aster/scheduler/: adaptive_batcher.py  policy_engine.py  scheduler.py
aster/telemetry/: logging.py  metrics.py
aster/testing/: __init__.py  conformance.py  fixtures.py
aster/workers/: inference_worker.py  supervisor.py
benchmark_results/: 20260319_174937.json
configs/: config.yaml.example
docs/: DEBUGGING.md  INDEX.md  MODEL_SETUP.md  OPENAI_COMPAT.md  OPERATIONS.md  implementation_roadmap.md  provider_architecture.md  provider_capability_matrix.md  provider_specs.md  unresolved_provider_ambiguities.md
docs/development/: DEVELOPMENT.md  MODEL_DOWNLOAD_ARCHITECTURE.md
docs/guides/: BACKGROUND_SERVICE_SETUP.md  BENCHMARK_GUIDE.md  DEPLOYMENT.md  QUICK_START_MODELS.md
docs/i18n/: MULTILINGUAL.md  README.md  i18n.json
docs/operations/: BACKGROUND_SERVICE.md
scripts/: README.md  download_models.py  ops.sh  test_audio_cli.py
tests/: conftest.py  test_api.py  test_audio_services.py  test_cache.py  test_config.py  test_embedding_backends.py  test_prefix_cache.py  test_scheduler.py  test_speculative_tokens.py  test_vllm_mlx_client.py
(+116 files in other folders)
